# ltheory

./: .editorconfig  .gitattributes  .gitignore  .luarc.json  .rustfmt.toml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  NOTICE  README.md  Untitled-1.json  build.rs  build.sh  c2rust-lib.rs  draw_rects.py  engine.code-workspace  expand.sh  format.sh  libphx.code-workspace  ltheory.code-workspace  rust-toolchain.toml  script.code-workspace  user.ini  utils.sh
engine/lib/luajit-ffi-gen/: Cargo.toml  README.md  readme.md
engine/lib/luajit-ffi-gen/src/: ffi_data.rs  ffi_generator.rs  generate.rs  lib.rs  lua_ffi.rs  method_info.rs  parse.rs  type_info.rs  util.rs
engine/lib/luajit-ffi-gen/src/args/: arg.rs  attr_args.rs  bind_args.rs  enum_attr_args.rs  impl_attr_args.rs  mod.rs
engine/lib/luajit-ffi-gen/src/enum_item/: enum_info.rs  generate.rs  generate_lua.rs  generate_rust.rs  lua_ffi.rs  mod.rs  parse.rs  variants_info.rs
engine/lib/luajit-ffi-gen/src/impl_item/: generate.rs  generate_lua.rs  generate_rust.rs  impl_info.rs  lua_ffi.rs  method_info.rs  mod.rs  parse.rs  type_info.rs
engine/lib/luajit-ffi-gen/tests/: basic_test.rs  helpers.rs  test_enum.rs  test_impl.rs  test_impl_arrays.rs  test_impl_box.rs  test_impl_callbacks.rs  test_impl_option.rs  test_impl_plain.rs  test_impl_result.rs
engine/lib/luajit-ffi-gen/tests/utils/: mod.rs
engine/lib/phx/: CMakeLists.txt  Cargo.toml  build.rs
engine/lib/phx/benches/: worker.rs
engine/lib/phx/script/: .editorconfig  libphx.lua
engine/lib/phx/script/ffi/: Audio.lua  Audio2.lua  BSP.lua  BSPDebug.lua  BSPNodeRef.lua  BSPNodeRel.lua  BlendMode.lua  Box3d.lua  Box3f.lua  Box3i.lua  BoxMesh.lua  BoxTree.lua  Button.lua  Button2.lua  Bytes.lua  ClipRect.lua  Collision.lua  CollisionGroup.lua  CollisionMask.lua  CubeFace.lua  CullFace.lua  Cursor.lua  CursorControl.lua  CursorGrabMode.lua  CursorIcon.lua  CursorState.lua  DepthTest.lua  Device.lua  Directory.lua  DragAndDropEvent.lua  DragAndDropState.lua  Draw.lua  Engine.lua  Error.lua  File.lua  Font.lua  GLMatrix.lua  GamepadAxis.lua  GamepadButton.lua  GamepadState.lua  (+91 more)
engine/lib/phx/script/ffi_common/: Audio.lua  BSP.lua  BSPDebug.lua  BSPNodeRef.lua  BSPNodeRel.lua  BlendMode.lua  Box3d.lua  Box3f.lua  BoxMesh.lua  BoxTree.lua  Bytes.lua  CollisionGroup.lua  Color.lua  CullFace.lua  CursorIcon.lua  DataFormat.lua  DepthTest.lua  File.lua  Font.lua  GLMatrix.lua  GUID.lua  GamepadButton.lua  Hash.lua  HmGui.lua  InputDevice.lua  InputDeviceType.lua  KDTree.lua  LodMesh.lua  Logger.lua  Math.lua  Matrix.lua  MemPool.lua  Metric.lua  MouseControl.lua  Octree.lua  PixelFormat.lua  PointClassification.lua  Position.lua  Profiler.lua  Quat.lua  (+32 more)
engine/lib/phx/script/ffi_ext/: Audio.lua  BSP.lua  Color.lua  Engine.lua  EngineImpl.lua  Event.lua  EventBus.lua  EventBusImpl.lua  EventType.lua  File.lua  (+24 more)
engine/lib/phx/src/: bit.rs  blend_mode.rs  button.rs  bytes.rs  clip_rect.rs  common.rs  cull_face.rs  data_format.rs  draw.rs  engine.rs  error.rs  file.rs  font.rs  gl_matrix.rs  hat_dir.rs  hmgui.rs  imgui.rs  input_bindings.rs  intersect.rs  keyboard.rs  lib.rs  logging.rs  lua.rs  lua_scheduler.rs  matrix.rs  mem_pool.rs  mesh.rs  meshes.rs  midi.rs  modifier.rs  open_gl.rs  physics.rs  profiler.rs  render_state.rs  rf.rs  shader_var.rs  sound.rs  str_map.rs  tex_filter.rs  tex_format.rs  (+2 more)
engine/lib/phx/test_data/: style1.toml  style1.yaml  style2.toml  style2.yaml  styles.yaml
libphx/: CMakeLists.txt  Cargo.toml  build.rs
libphx/cmake/: External.cmake  SDL.diff  Shared.cmake
libphx/ext/: .gitignore
libphx/fmod-sys/: Cargo.toml  build.rs
libphx/include/: BlendMode.h  BoxMesh.h  Button.h  Common.h  CullFace.h  DeviceType.h  Directory.h  Draw.h  Engine.h  FMODError.h  GLMatrix.h  GamepadAxis.h  Lua.h  MatrixDef.h  Midi.h  OpenGL.h  PhxConfig.h  PhxFloat.h  PhxMath.h  PhxMemory.h  PhxString.h  Plane.h  Quat.h  RendererState.h  SDL.h  SDLext.h  Shader.h  SoundDef.h  VR.h  Window.h
libphx/luajit-ffi-gen/: Cargo.toml  readme.md
libphx/luajit-ffi-gen/src/: generate.rs  lib.rs  lua_ffi.rs  method_info.rs  parse.rs  util.rs
libphx/luajit-ffi-gen/src/args/: attr_args.rs  bind_args.rs  mod.rs
libphx/luajit_ffi_gen/: Cargo.toml  readme.md  readme.rs
libphx/luajit_ffi_gen/src/: args.rs  generate.rs  impl_info.rs  lib.rs  lua_ffi.rs  method_info.rs  parse.rs  util.rs
libphx/luajit_ffi_gen/src/args/: arg.rs  attr_args.rs  bind_args.rs
libphx/luajit_ffi_gen/tests/: basic_test.rs
libphx/script/ffi/: Bit.lua  BoxMesh.lua  BoxTree.lua  Button.lua  Bytes.lua  ClipRect.lua  DataFormat.lua  DeviceType.lua  Directory.lua  Draw.lua  Engine.lua  GUID.lua  HmGui.lua  Input.lua  LineSegment.lua  Math.lua  Memory.lua  Mesh.lua  Metric.lua  Mouse.lua  MouseButton.lua  Polygon.lua  PolygonClassification.lua  Profiler.lua  Resource.lua  Shader.lua  ShaderVar.lua  Sound.lua  State.lua  Tex3D.lua  TexCube.lua  TexFilter.lua  ThreadPool.lua  Time.lua  UIRenderer.lua  Vec3f.lua  Vec4d.lua  Vertex.lua  Window.lua  lfs_ffi.lua  (+1 more)
libphx/script/ffiext/: BSP.lua  Directory.lua  File.lua  Input.lua  Math.lua  RNG.lua  Ray.lua  Vec2.lua  Vec3.lua  Window.lua
libphx/src/: Audio.cpp  Audio.rs  BSP.rs  Bit.rs  BlendMode.rs  BoxMesh.c  BoxMesh.cpp  BoxMesh.rs  BoxTree.c  BoxTree.rs  Button.c  Button.cpp  Button.rs  Bytes.c  Bytes.cpp  Bytes.rs  ClipRect.c  ClipRect.rs  CollisionShape.rs  Common.rs  CubeFace.rs  CullFace.rs  DataFormat.rs  DepthTest.rs  Device.rs  DeviceType.c  DeviceType.rs  Directory.cpp  Directory.rs  Draw.cpp  Draw.rs  Engine.cpp  Engine.rs  Error.rs  File.rs  Font.cpp  Font.rs  GL.rs  GLMatrix.cpp  GLMatrix.rs  (+237 more)
libphx/src/cpp/: CollisionShape.cpp  Physics.cpp  RigidBody.cpp
libphx/src/cpp/include/: Box3.h  Button.h  Error.h  Intersect.h  MatrixDef.h  PhxInt.h  Physics.h  Random.h  RefCounted.h  ResourceType.h  RigidBody.h  Shader.h  ShaderVarType.h  SoundDef.h  Tex2D.h  Trigger.h  Vec2.h
libphx/src/internal/: Memory.rs  ffi.rs  memory.rs  mod.rs
libphx/src/internal/convert/: c2rust.rs  lua2rust.rs  mod.rs  rust2lua.rs
(+2006 files in other folders)
