[workspace]
resolver = "2"
members = ["engine/bin/*", "engine/lib/*"]

[workspace.package]
version = "0.1.0"
authors = ["Limit Theory Redux Team"]
edition = "2021"
license = "Unlicense"

[workspace.dependencies]
# workspace bin crates
ltr = { path = "engine/bin/ltr" }

# workspace lib crates
phx = { path = "engine/lib/phx" }
luajit-ffi-gen = { path = "engine/lib/luajit-ffi-gen" }

# Speed up sound files loading in dev mode. See: https://docs.rs/kira/0.8.3/kira/#performance-using-the-dev-profile
[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-format-wav]
opt-level = 3

[profile.dev.package.symphonia-codec-pcm]
opt-level = 3
