[workspace]
resolver = "2"
members = ["engine/bin/*", "engine/lib/*"]

[workspace.package]
version = "0.1.0"
authors = ["Limit Theory Redux Team"]
edition = "2024"
license = "MIT/Apache-2.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
# workspace bin crates
ltr = { path = "engine/bin/ltr" }

# workspace lib crates
internal = { path = "engine/lib/internal" }
phx = { path = "engine/lib/phx" }
luajit-ffi-gen = { path = "engine/lib/luajit-ffi-gen" }

# external crates
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Ensure that all non-workspace members are compiled with full optimizations
# enabled when using the default dev profile.
[profile.dev.package."*"]
opt-level = 3
