[package]
name = "phx"
authors = ["Limit Theory Redux Team"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "phx"
path = "src/mod.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
glam = "0.22.0"
stb = "0.3.2"
sdl2-sys = { version = "0.35.2", features = ["bundled", "static-link"] }
memoffset = "0.8"
printf-compat = "0.1.1"
rodio = "0.17.0"
flate2 = "1.0.25"

[build-dependencies]
cmake = "0.1"
cc = { version = "1.0", features = ["parallel"] }
flate2 = "1.0.25"
http_req = "~0.2.1"
tar = "~0.4.15"
cbindgen = "0.24.3"
