[package]
name = "phx"
authors = ["Limit Theory Redux Team"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "phx"
path = "src/mod.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
glam = { version = "0.23", features = ["scalar-math"] }
stb = "0.3"
sdl2-sys = { git = "https://github.com/hikari-no-yume/rust-sdl2.git", branch = "update-bundled-SDL2", features = ["bundled", "static-link"] }
memoffset = "0.8"
printf-compat = "0.1.1"
rodio = "0.17.0"
flate2 = "1.0.25"
mlua = { version = "0.8", features = ["luajit"] }
freetype-sys = "0.17"
fmod-sys = { path = "fmod-sys" }

[build-dependencies]
cmake = "0.1"
cc = { version = "1.0", features = ["parallel"] }
cbindgen = "0.24"
gl_generator = "0.14"
