[package]
name = "phx"
authors = ["Limit Theory Redux Team"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "phx"
path = "src/mod.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
chrono = "0.4.24"
glam = { version = "0.24", features = ["scalar-math"] }
image = "0.24.6"
sdl2-sys = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", branch = "master", features = ["bundled", "static-link"] }
memoffset = "0.8"
printf-compat = "0.1.1"
rodio = "0.17.0"
flate2 = "1.0.25"
mlua = { version = "0.8", features = ["luajit", "vendored"] }
freetype-sys = "0.17"
fmod-sys = { path = "fmod-sys" }

[build-dependencies]
cmake = "0.1"
cc = { version = "1.0", features = ["parallel"] }
cbindgen = "0.24"
gl_generator = "0.14"
