[package]
name = "luajit-ffi-gen"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
internal.workspace = true

proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
libc = "0.2.146"
tracing = "0.1.37"
