[package]
name = "luajit-ffi-gen"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[lints.rust]
unsafe_code = "deny"

[dependencies]
# workspace crates
internal.workspace = true

# external crates
proc-macro2.workspace = true
quote.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn.workspace = true

[dev-dependencies]
libc = "0.2"
tracing = "0.1"
