[package]
name = "phx"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# workspace crates
internal.workspace = true
luajit-ffi-gen.workspace = true

# external crates
chrono = "0.4"
directories = "5.0"
flate2 = "1.0"
freetype-sys = "0.20"
gilrs = "0.10"
glam = { version = "0.25", features = ["scalar-math"] }
glutin = { git = "https://github.com/dgavedissian/glutin", rev = "0454c7b91890af1160513797d3a8ee1aea63fc8e" }
glutin-winit = { git = "https://github.com/dgavedissian/glutin", rev = "0454c7b91890af1160513797d3a8ee1aea63fc8e" }
hashbrown = { version = "0.14", features = ["serde"] }
image = "0.25"
indexmap = "2.0"
kira = { version = "0.8", features = ["symphonia", "cpal", "serde"] }
libc = "0.2"
memoffset = "0.9"
mlua = { version = "0.9", features = ["luajit52", "vendored"] }
once_cell = "1.19"
parley = "0.1"
swash = "0.1"
rapier3d-f64 = { version = "0.18", features = ["simd-stable", "debug-render"] }
num_cpus = "1.15"
raw-window-handle = "0.5"
regex = "1.8"
rodio = "0.17"
serde_yaml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winit = "0.29"
walkdir = "2.4"

[build-dependencies]
gl_generator = "0.14"
