[package]
name = "phx"
rust-version = "1.80"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# workspace crates
internal.workspace = true
luajit-ffi-gen.workspace = true

# external crates
arboard = "3.4"
chrono = "0.4"
directories = "5.0"
flate2 = "1.0"
freetype-sys = "0.20"
gilrs = "0.10"
glam = { version = "0.28", features = ["scalar-math"] }
glutin = "0.32"
glutin-winit = "0.5"
hashbrown = { version = "0.14", features = ["serde"] }
image = "0.25"
indexmap = "2.0"
kira = { version = "0.9", features = ["symphonia", "cpal", "serde"] }
libc = "0.2"
memoffset = "0.9"
mlua = { version = "0.9", features = ["luajit52", "vendored"] }
parley = "0.1"
swash = "0.1"
rapier3d-f64 = { version = "0.22", features = ["simd-stable", "debug-render"] }
num_cpus = "1.15"
raw-window-handle = "0.6"
regex = "1.8"
rodio = "0.17"
serde_yaml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winit = "0.30"
walkdir = "2.4"
strum = "0.26"
strum_macros = "0.26"

[build-dependencies]
gl_generator = "0.14"
